fix homepage excerpt spacing

--- a/style.less
+++ b/style.less
@@ -87,6 +87,7 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 			}
 		}
 		p { margin-bottom: 30px; }
+		p.excerpt { margin-bottom: 0px; }
 		span.home { padding: 7px; font-size: 1.5em; line-height: 0em; display: inline-block; margin-left: -50px; }
 	}
 	article.post:hover { 
